영화 순위 API  연동 완료