@@ -1,38 +1,34 @@
 package com.movie.movieinfo.service.movie;
 
-import com.movie.movieinfo.dto.movie.movieRank.MovieRankApiResponseDto;
-import com.movie.movieinfo.dto.movie.movieRank.MovieRankResponseDto;
+import com.movie.movieinfo.dto.movie.movieRank.response.Movie;
+import com.movie.movieinfo.dto.movie.movieRank.response.MovieRankResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Collections;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class MovieRankService {
 
     private final RestTemplate restTemplate;
-    private final String baseUrl = "http://kobis.or.kr/kobisopenapi/webservice/rest/movie/searchMovieList.json";
+    private final String baseUrl = "http://kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json";
     private final String key = "1d0c83284fa09d1173eb87e683c896ee";
 
-    public List<MovieRankResponseDto> getRank() {
-        String url = baseUrl + "?key=" + key;
+    public List<Movie> getRank(LocalDate targetDate) {
+        String formattedDate = targetDate.format(DateTimeFormatter.ofPattern("yyyyMMdd"));
+        String url = baseUrl + "?key=" + key+"&targetDt=" +formattedDate;
         try {
-            // API 호출 + 응답
-            MovieRankApiResponseDto response = restTemplate.getForObject(url, MovieRankApiResponseDto.class);
-
-            return response.getMovieListResult().getMovieList().stream().map(movieInfo -> new MovieRankResponseDto(
-                    movieInfo.getMovieCd(),
-                    movieInfo.getMovieNm(),
-                    movieInfo.getOpenDt(),
-                    movieInfo.getDirectorNm()
-            )).collect(Collectors.toList());
+            MovieRankResponse response = restTemplate.getForObject(url, MovieRankResponse.class);
+            if (response != null && response.getBoxOfficeResult() != null) {
+                return response.getBoxOfficeResult().getMovieList();
+            }
         } catch (Exception e) {
             e.printStackTrace();
         }
-        return Collections.emptyList(); // 오류 발생 시 빈 리스트 반환
+        return List.of(); // 오류 발생 시 빈 리스트 반환
     }
 }
